--- a/1908/less/1908.less
+++ b/1908/less/1908.less
@@ -32,25 +32,15 @@
                 list-style:none;
                 li {
                     margin-bottom: 10px;
-                    .input-check{
-                        input{
-                            position: relative;
-                            height: 20px;
-                            width: 20px;
-                            top: 5px;
-                            cursor: pointer;
-                        }
-                        a{
-                            color: @color2;
-                            &:hover{
-                                color:@color3;
-                                text-decoration: none;
-                            }
-                            cursor: pointer;
+                    a{
+                        color: @color2;
+                        padding-left:20px;
+                        &:hover{
+                            color:@color3;
+                            text-decoration: none;
                         }
                     }
                 }
-
             }
             .widget-title {
                 cursor: pointer;
